--- a/wikipendium/settings/local.py.example
+++ b/wikipendium/settings/local.py.example
@@ -17,3 +17,8 @@ SECRET_KEY = '3fbnn%u5_j1)p%k^4y%=v!qi2m!=z#kz8m_vn#^*+j5u!4hmvv'
 
 GOOGLE_ANALYTICS_KEY = ''
 GOOGLE_ANALYTICS_NAME = ''
+
+"""
+ACTIVATE_FAKEAUTH = "YES, I WANT TO ENABLE PASSWORDLESS LOGIN" \
+                  + " FOR ALL USERS, INCLUDING SUPERUSERS"
+"""
