--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 django==1.5.4
 django-registration==1.0
 south==0.8.2
-markdown2==2.1.0
+-e git://github.com/sigvef/Python-Markdown.git#egg=markdown
 fabric==1.7.0
 pytz==2013d
-markdown2Mathjax==0.3.8
 django-ignoretests==0.3.2
 boto==2.9.9
 newrelic==2.0.0.1
