--- a/wikipendium/settings/local.py.example
+++ b/wikipendium/settings/local.py.example
@@ -25,6 +25,8 @@ GOOGLE_ANALYTICS_NAME = ''
 AWS_ID = ''
 AWS_KEY = ''
 AWS_BACKUP_BUCKET_NAME = ''
+AWS_PUBLIC_BUCKET_NAME = ''
+AWS_PUBLIC_URL = ''
 """
 
 # For newrelic integration
