Add aws image upload backend

--- a/wikipendium/settings/local.py.example
+++ b/wikipendium/settings/local.py.example
@@ -30,6 +30,8 @@ ACTIVATE_FAKEAUTH = "YES, I WANT TO ENABLE PASSWORDLESS LOGIN" \
 AWS_ID = ''
 AWS_KEY = ''
 AWS_BACKUP_BUCKET_NAME = ''
+AWS_PUBLIC_BUCKET_NAME = ''
+AWS_PUBLIC_URL = ''
 """
 
 # For newrelic integration
