Update fabfile and local.py to reflect new server
Since we moved to dåosj/dio (new way of saying digital ocean) we need to
update our configs a tiny bit.

--- a/wikipendium/settings/local.py.example
+++ b/wikipendium/settings/local.py.example
@@ -35,5 +35,5 @@ AWS_BUCKET_NAME = ''
 # For newrelic integration
 """
 import newrelic.agent
-newrelic.agent.initialize('/home/prods/wikipendium.no/wikipendium/settings/newrelic.ini')
+newrelic.agent.initialize('/home/wikipendium-web/wikipendium.no/wikipendium/settings/newrelic.ini')
 """
