--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 django==1.6.4
-django-registration==1.0
+git+git://github.com/macropin/django-registration.git@e3ec641fc0#egg=django-registration-fix
 south==0.8.2
 git+git://github.com/sigvef/Python-Markdown.git#egg=markdown
 git+git://github.com/sigvef/python-markdown-mathjax.git#egg=mdx_mathjax
