Update to Django 1.7
New migrations
Update test runner

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-django==1.6.4
-git+git://github.com/macropin/django-registration.git@e3ec641fc0#egg=django-registration-fix
-south==0.8.2
+django==1.7.3
+django-registration-redux==1.1
 git+git://github.com/sigvef/Python-Markdown.git#egg=markdown
 git+git://github.com/wikipendium/python-markdown-mathjax.git#egg=markdown_mathjax
 git+git://github.com/stianjensen/mdx_outline.git
 fabric==1.8.0
 pytz==2013d
-git+git://github.com/stianjensen/django-ignoretests.git
 boto==2.9.9
 newrelic==2.4.0.4
 django-mailgun==0.2.2
