--- a/wikipendium/settings/local.py.example
+++ b/wikipendium/settings/local.py.example
@@ -46,3 +46,11 @@ CACHES = {
 
 # Disable secure cookies in development environments
 SESSION_COOKIE_SECURE = False
+
+import os
+HAYSTACK_CONNECTIONS = {
+    'default': {
+        'ENGINE': 'haystack.backends.whoosh_backend.WhooshEngine',
+        'PATH': os.path.join(os.path.dirname(__file__), 'whoosh_index'),
+    },
+}
