Upgrade pytz to version 2015.4
The changes are mostly updates of the timezone database.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ git+git://github.com/wikipendium/Python-Markdown.git@5e9e809#egg=markdown
 git+git://github.com/wikipendium/python-markdown-mathjax.git#egg=markdown_mathjax
 git+git://github.com/stianjensen/mdx_outline.git
 fabric==1.10.2
-pytz==2013d
+pytz==2015.4
 boto==2.9.9
 newrelic==2.4.0.4
 django-mailgun==0.2.2
