Add BASE_URL to settings
It is added to both base.py and local.py, so that prod does not need to
be updated upon deploy.

--- a/wikipendium/settings/local.py.example
+++ b/wikipendium/settings/local.py.example
@@ -54,3 +54,6 @@ HAYSTACK_CONNECTIONS = {
         'PATH': os.path.join(os.path.dirname(__file__), 'whoosh_index'),
     },
 }
+
+# Base URL
+BASE_URL = 'http://localhost:8000'
