--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ newrelic==2.54.0.41
 django-mailgun==0.8.0
 django-compressor==2.1
 django-taggit==0.18.0
-git+git://github.com/wikipendium/django-dumpdb.git
+git+git://github.com/wikipendium/django-dumpdb.git@16ad009#egg=django-dumpdb
 flake8==2.4.1
 flake8-quotes==0.0.1
 libsass==0.8.3
