Add error logging to file
This splits the settings so that we can have different logging for base,
test and local.

Also, django-appconf is an indirect dependency of django-compressor
which apparently has released a patch version that drops python2 support
since the last time we did anything (which reminds me that we really
should not be running this on python 2 in prod much longer!) Anyway. I
had to pin it to the previous version to keep this working.

--- a/wikipendium/settings/local.py.example
+++ b/wikipendium/settings/local.py.example
@@ -57,3 +57,24 @@ HAYSTACK_CONNECTIONS = {
 
 # Base URL
 BASE_URL = 'http://localhost:8000'
+
+LOGGING = {
+    'version': 1,
+    'disable_existing_loggers': False,
+    'filters': {
+        'require_debug_false': {
+            '()': 'django.utils.log.RequireDebugFalse'
+        }
+    },
+    'handlers': {
+        'console': {
+            'class': 'logging.StreamHandler',
+        },
+    },
+    'loggers': {
+        'django': {
+            'handlers': ['console'],
+            'level': os.getenv('DJANGO_LOG_LEVEL', 'INFO'),
+        },
+    },
+}
