--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ fabric==1.10.2
 pytz==2015.4
 boto==2.38.0
 newrelic==2.54.0.41
-django-mailgun==0.8.0
+git+git://github.com/BradWhittington/django-mailgun/@d5f66d050c596fa95f474a0ed0ef15b9ed704b14#egg=django-mailgun
+django-mailgun
 django-compressor==2.1
 django-taggit==0.22.2
 git+git://github.com/wikipendium/django-dumpdb.git@16ad009#egg=django-dumpdb
